k3s/example/echoserver/service-echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: source-ip-srv
  namespace: echoserver
spec:
  selector:
    app: source-ip-app
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 8080
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort:
