k3s/example/echoserver/ingress-echoserver.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: source-ip-ingress
  namespace: echoserver
spec:
  ingressClassName: "nginx"
  rules:
    - host: test123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: source-ip-srv
                port:
                  number: 80
